tests/typecheck/fail/alias_constructor_not_record_sum.tw
// Alias to a sum type cannot be used as record constructor
type MaybeInt = Option<Int>

fn main() {
    x := MaybeInt.{ value: 1 }
}
